# RPN

./: .gitignore  LICENSE  README.md  build.sh  clean.sh  configure.ac  test.sh
src/: Makefile.am  arithmetic.c  arithmetic.h  array.h  elt.c  elt.h  float.h  integer.h  list.h  main.c  operator.c  operator.h  rpn.c  rpn.h  rpn_lex.l  stack.c  stack.h  strings.h
test/: regress.py
test/files/: addition  basic  division  incrementation  multiplication  power  substraction
test/results/: addition.result  basic.result  division.result  incrementation.result  multiplication.result  power.result  substraction  substraction.result  usage.result
